--- a/config/sync/language/da/views.view.archive.yml
+++ b/config/sync/language/da/views.view.archive.yml
@@ -1,34 +1,34 @@
-label: Arkiv
-description: 'Alt indhold, efter måned.'
+label: Archive
+description: 'All content, by month.'
 display:
   default:
-    display_title: Standard
+    display_title: Default
     display_options:
-      title: Månedsarkiv
+      title: 'Monthly archive'
       pager:
         options:
           tags:
             next: ››
             previous: ‹‹
           expose:
-            items_per_page_label: 'Antal elementer'
-            items_per_page_options_all_label: '- Alle -'
-            offset_label: Forskydning
+            items_per_page_label: 'Items per page'
+            items_per_page_options_all_label: '- All -'
+            offset_label: Offset
       exposed_form:
         options:
-          submit_button: Udfør
-          reset_button_label: Gendan
-          exposed_sorts_label: 'Sortér efter'
-          sort_asc_label: Stigende
-          sort_desc_label: Faldende
+          submit_button: Anvend
+          reset_button_label: Nulstil
+          exposed_sorts_label: 'Sort by'
+          sort_asc_label: Asc
+          sort_desc_label: Desc
       arguments:
         created_year_month:
           title: '{{ arguments.created_year_month }}'
   block_1:
-    display_title: Blok
+    display_title: Block
     display_options:
       arguments:
         created_year_month:
           title: '{{ arguments.created_year_month }}'
   page_1:
-    display_title: Side
+    display_title: Page
