--- a/config/sync/language/da/views.view.group_members.yml
+++ b/config/sync/language/da/views.view.group_members.yml
@@ -1,37 +1,61 @@
+label: 'Group members'
 display:
   default:
     display_title: Master
     display_options:
+      title: Members
       fields:
         name:
-          label: Bruger
+          label: User
+          separator: ', '
         group_roles:
-          label: Roller
+          label: Roles
+          separator: ', '
         changed:
           label: Opdateret
+          separator: ', '
+        created:
+          label: Joined
+          separator: ', '
+        view_group_relationship:
+          admin_label: 'View member link'
+          text: 'View member'
+        edit_group_relationship:
+          admin_label: 'Edit member link'
+          text: 'Edit member'
+        delete_group_relationship:
+          admin_label: 'Remove member link'
+          text: 'Remove member'
         dropbutton:
-          label: Handlinger
+          label: Operations
       pager:
         options:
           tags:
             next: ››
             previous: ‹‹
-            first: '« Første'
-            last: 'Sidste »'
+            first: '« First'
+            last: 'Last »'
           expose:
-            items_per_page_label: 'Antal elementer'
-            items_per_page_options_all_label: '- Alle -'
-            offset_label: Forskydning
+            items_per_page_label: 'Items per page'
+            items_per_page_options_all_label: '- All -'
+            offset_label: Offset
       exposed_form:
         options:
-          submit_button: Udfør
-          reset_button_label: Gendan
-          exposed_sorts_label: 'Sortér efter'
-          sort_asc_label: Stigende
-          sort_desc_label: Faldende
+          submit_button: Anvend
+          reset_button_label: Nulstil
+          exposed_sorts_label: 'Sort by'
+          sort_asc_label: Asc
+          sort_desc_label: Desc
+      empty:
+        area_text_custom:
+          content: 'No members available.'
       arguments:
         gid:
           exception:
-            title: Alle
+            title: All
+          title: '{{ arguments.gid|placeholder }} members'
   page_1:
-    display_title: Side
+    display_title: Page
+    display_options:
+      menu:
+        title: Members
