Removed english strings

--- a/config/sync/language/da/system.menu.tools.yml
+++ b/config/sync/language/da/system.menu.tools.yml
@@ -1,2 +1,2 @@
-label: Tools
-description: 'User tool links, often added by modules'
+label: Værktøjer
+description: 'Bruger værktøjslinks, som typisk tilføjes af moduler'
