--- a/config/sync/language/da/views.view.taxonomy_term.yml
+++ b/config/sync/language/da/views.view.taxonomy_term.yml
@@ -1,8 +1,8 @@
-label: 'Taxonomy term'
-description: 'Content belonging to a certain taxonomy term.'
+label: 'Ord i ordforråd'
+description: 'Indhold som er knyttet til en bestemt term.'
 display:
   default:
-    display_title: Default
+    display_title: Standard
     display_options:
       pager:
         options:
@@ -10,22 +10,22 @@ display:
             next: ››
             previous: ‹‹
           expose:
-            items_per_page_label: 'Items per page'
-            items_per_page_options_all_label: '- All -'
-            offset_label: Offset
+            items_per_page_label: 'Antal elementer'
+            items_per_page_options_all_label: '- Alle -'
+            offset_label: Forskydning
       exposed_form:
         options:
-          submit_button: Anvend
-          reset_button_label: Nulstil
-          exposed_sorts_label: 'Sort by'
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          submit_button: Udfør
+          reset_button_label: Gendan
+          exposed_sorts_label: 'Sortér efter'
+          sort_asc_label: Stigende
+          sort_desc_label: Faldende
       arguments:
         tid:
           exception:
-            title: All
+            title: Alle
           title: '{{ arguments.tid }}'
   feed_1:
     display_title: Feed
   page_1:
-    display_title: Page
+    display_title: Side
