--- a/config/sync/language/da/system.menu.account.yml
+++ b/config/sync/language/da/system.menu.account.yml
@@ -1,2 +1,2 @@
-label: 'User account menu'
-description: 'Links related to the active user account'
+label: Brugerkontomenu
+description: 'Links relateret til den aktive brugerkonto'
