--- a/config/sync/language/da/views.view.archive.yml
+++ b/config/sync/language/da/views.view.archive.yml
@@ -1,34 +1,34 @@
-label: Archive
-description: 'All content, by month.'
+label: Arkiv
+description: 'Alt indhold, efter måned.'
 display:
   default:
-    display_title: Default
+    display_title: Standard
     display_options:
-      title: 'Monthly archive'
+      title: Månedsarkiv
       pager:
         options:
           tags:
             next: ››
             previous: ‹‹
           expose:
-            items_per_page_label: 'Items per page'
-            items_per_page_options_all_label: '- All -'
-            offset_label: Offset
+            items_per_page_label: 'Antal elementer'
+            items_per_page_options_all_label: '- Alle -'
+            offset_label: Forskydning
       exposed_form:
         options:
-          submit_button: Anvend
-          reset_button_label: Nulstil
-          exposed_sorts_label: 'Sort by'
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          submit_button: Udfør
+          reset_button_label: Gendan
+          exposed_sorts_label: 'Sortér efter'
+          sort_asc_label: Stigende
+          sort_desc_label: Faldende
       arguments:
         created_year_month:
           title: '{{ arguments.created_year_month }}'
   block_1:
-    display_title: Block
+    display_title: Blok
     display_options:
       arguments:
         created_year_month:
           title: '{{ arguments.created_year_month }}'
   page_1:
-    display_title: Page
+    display_title: Side
