--- a/config/sync/language/da/views.view.authmap.yml
+++ b/config/sync/language/da/views.view.authmap.yml
@@ -1,55 +1,44 @@
-label: 'External authentication links'
-description: 'Provides overview of external authentication links.'
 display:
   default:
     display_title: Master
     display_options:
-      title: 'External authentication links'
+      exposed_form:
+        options:
+          submit_button: Udfør
+          reset_button_label: Gendan
+          exposed_sorts_label: 'Sortér efter'
+          sort_asc_label: Stigende
+          sort_desc_label: Faldende
+      pager:
+        options:
+          expose:
+            items_per_page_label: 'Antal elementer'
+            items_per_page_options_all_label: '- Alle -'
+            offset_label: Forskydning
+          tags:
+            previous: ‹‹
+            next: ››
       fields:
-        authname:
-          label: 'Authentication Name'
         uid:
-          label: 'Drupal User ID'
           format_plural_string: !!binary MQNAY291bnQ=
         name:
-          label: 'Drupal User Name'
           separator: ', '
         delete_link:
           label: slet
           text: slet
-      pager:
-        options:
-          tags:
-            next: ››
-            previous: ‹‹
-          expose:
-            items_per_page_label: 'Items per page'
-            items_per_page_options_all_label: '- All -'
-            offset_label: Offset
-      exposed_form:
-        options:
-          submit_button: Anvend
-          reset_button_label: Nulstil
-          exposed_sorts_label: 'Sort by'
-          sort_asc_label: Asc
-          sort_desc_label: Desc
-      empty:
-        area_text_custom:
-          content: 'No links (from Authentication name to Drupal user) found.'
-      arguments:
-        provider_field:
-          exception:
-            title: All
-          title: 'Links for {{ arguments.provider_field }}'
       filters:
         authname:
           expose:
-            label: 'Authentication name'
+            label: Autentificeringsnavn
         uid:
           expose:
-            label: 'Drupal user'
+            label: 'Drupal bruger'
+      arguments:
+        provider_field:
+          exception:
+            title: Alle
   page:
-    display_title: Page
+    display_title: Side
     display_options:
       menu:
-        title: External
+        title: Eksterne
