--- a/config/sync/language/da/views.view.who_s_online.yml
+++ b/config/sync/language/da/views.view.who_s_online.yml
@@ -1,30 +1,30 @@
-label: "Who's online block"
-description: 'Shows the user names of the most recently active users, and the total number of active users.'
+label: 'Hvem er online'
+description: 'Viser navnene på de brugere, der senste har været aktive, og det totale antal af aktive brugere.'
 display:
   default:
-    display_title: Default
+    display_title: Standard
     display_options:
-      title: "Who's online"
+      title: 'Hvem er online'
       exposed_form:
         options:
-          submit_button: Anvend
-          reset_button_label: Nulstil
-          exposed_sorts_label: 'Sort by'
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          submit_button: Udfør
+          reset_button_label: Gendan
+          exposed_sorts_label: 'Sortér efter'
+          sort_asc_label: Stigende
+          sort_desc_label: Faldende
       empty:
         area_text_custom:
-          content: 'There are currently 0 users online.'
+          content: 'Der er i øjeblikket 0 brugere online.'
       filters:
         access:
           expose:
-            label: 'Last access'
-            description: 'A user is considered online for this long after they have last viewed a page.'
+            label: 'Seneste tilgang'
+            description: 'En bruger bliver opfattet som online i dette tidsrum efter hun sidst har set en side.'
       header:
         result:
-          content: 'There are currently @total users online.'
+          content: 'Der er i øjeblikket @total brugere online.'
   who_s_online_block:
-    display_title: "Who's online"
+    display_title: 'Hvem er online'
     display_options:
-      display_description: 'A list of users that are currently logged in.'
-      block_description: "Who's online"
+      display_description: 'En liste af indloggede brugere.'
+      block_description: 'Hvem er online'
