--- a/config/sync/language/da/webform.settings.yml
+++ b/config/sync/language/da/webform.settings.yml
@@ -2,11 +2,11 @@ settings:
   default_submit_button_label: Indsend
   default_reset_button_label: Gendan
   default_delete_button_label: Slet
-  default_wizard_prev_button_label: '< Previous'
-  default_wizard_next_button_label: 'Next >'
-  default_wizard_confirmation_label: Complete
+  default_wizard_prev_button_label: '< Forrige'
+  default_wizard_next_button_label: 'Næste >'
+  default_wizard_confirmation_label: Afslut
   default_preview_next_button_label: Gennemse
-  default_preview_prev_button_label: '< Previous'
+  default_preview_prev_button_label: '< Forrige'
   default_preview_label: Gennemse
   dialog_options:
     narrow:
