Updated config translations

--- a/config/sync/language/da/taxonomy.vocabulary.project_track_type.yml
+++ b/config/sync/language/da/taxonomy.vocabulary.project_track_type.yml
@@ -1,2 +1,2 @@
 name: 'Projektspor type'
-description: 'Projektspor bruges til at gruppere værktøjer og skabe en ensartet vurdering af hver del af et projekt.'
+description: 'Project tracks are used to group tools to represent a unified evaluation of part of a project'
