--- a/config/sync/language/da/views.view.content.yml
+++ b/config/sync/language/da/views.view.content.yml
@@ -1,70 +1,72 @@
-label: Indhold
-description: 'Find og håndtér indhold.'
+label: Content
+description: 'Find and manage content.'
 display:
   default:
-    display_title: Standard
+    display_title: Default
     display_options:
-      title: Indhold
+      title: Content
       fields:
         title:
           label: Titel
         type:
-          label: Indholdstype
+          label: 'Content type'
+          separator: ', '
         name:
-          label: Forfatter
+          label: Author
         status:
           label: Status
           settings:
-            format_custom_false: 'Ikke udgivet'
-            format_custom_true: Udgivet
+            format_custom_false: Unpublished
+            format_custom_true: Published
         changed:
           label: Opdateret
         langcode:
-          label: Sprog
+          label: Language
+          separator: ', '
         operations:
-          label: Handlinger
+          label: Operations
       pager:
         options:
           tags:
             next: 'Næste ›'
             previous: '‹ Forrige'
-            first: '« Første'
-            last: 'Sidste »'
+            first: '« First'
+            last: 'Last »'
       exposed_form:
         options:
           submit_button: Filter
-          reset_button_label: Gendan
-          exposed_sorts_label: 'Sortér efter'
+          reset_button_label: Nulstil
+          exposed_sorts_label: 'Sorter efter'
           sort_asc_label: Stigende
           sort_desc_label: Faldende
       empty:
         area_text_custom:
-          content: 'Der er intet indhold at vise.'
+          content: 'Intet indhold.'
       filters:
         title:
           expose:
             label: Titel
         type:
           expose:
-            label: Indholdstype
+            label: 'Indholdstype'
         status:
           expose:
             label: Status
           group_info:
-            label: Publiceringsstatus
+            label: 'Publiseringsstatus'
             group_items:
               1:
-                title: Udgivet
+                title: Publiseret
               2:
-                title: 'Ikke udgivet'
+                title: Ikke publiseret
         langcode:
           expose:
             label: Sprog
   page_1:
-    display_title: Side
+    display_title: Page
     display_options:
       menu:
-        title: Indhold
+        title: Content
       tab_options:
-        title: Indhold
-        description: 'Find og håndtér indhold'
+        title: Content
+        description: 'Find and manage content'
