--- a/config/sync/language/da/views.view.glossary.yml
+++ b/config/sync/language/da/views.view.glossary.yml
@@ -1,36 +1,36 @@
-label: Ordliste
-description: 'Alt indhold efter forbogstav.'
+label: Glossary
+description: 'All content, by letter.'
 display:
   default:
-    display_title: Standard
+    display_title: Default
     display_options:
       fields:
         title:
           label: Titel
         name:
-          label: Forfatter
+          label: Author
         changed:
-          label: 'Seneste opdatering'
+          label: 'Last update'
       pager:
         options:
           tags:
             next: ››
             previous: ‹‹
           expose:
-            items_per_page_label: 'Antal elementer'
-            items_per_page_options_all_label: '- Alle -'
-            offset_label: Forskydning
+            items_per_page_label: 'Items per page'
+            items_per_page_options_all_label: '- All -'
+            offset_label: Offset
       exposed_form:
         options:
-          submit_button: Udfør
-          reset_button_label: Gendan
-          exposed_sorts_label: 'Sortér efter'
-          sort_asc_label: Stigende
-          sort_desc_label: Faldende
+          submit_button: Anvend
+          reset_button_label: Nulstil
+          exposed_sorts_label: 'Sort by'
+          sort_asc_label: Asc
+          sort_desc_label: Desc
   attachment_1:
-    display_title: Bilag
+    display_title: Attachment
   page_1:
-    display_title: Side
+    display_title: Page
     display_options:
       menu:
-        title: Ordliste
+        title: Glossary
