--- a/config/sync/language/da/views.view.webform_submissions.yml
+++ b/config/sync/language/da/views.view.webform_submissions.yml
@@ -1,79 +1,180 @@
+label: 'Webform submissions'
+description: 'Default webform submissions views.'
 display:
   default:
     display_title: Master
     display_options:
-      exposed_form:
-        options:
-          submit_button: Udfør
-          reset_button_label: Gendan
-          exposed_sorts_label: 'Sortér efter'
-          sort_asc_label: Stigende
-          sort_desc_label: Faldende
+      title: 'Webform submissions'
+      fields:
+        sid:
+          label: '#'
+          separator: ', '
+        in_draft:
+          label: Draft
+          separator: ', '
+        created:
+          label: Created
+          separator: ', '
+        remote_addr:
+          label: 'IP address'
+          separator: ', '
+        view_webform_submission:
+          label: Operations
+          text: view
       pager:
         options:
           tags:
-            previous: ‹‹
             next: ››
-            first: '« Første'
-            last: 'Sidste »'
+            previous: ‹‹
+            first: '« First'
+            last: 'Last »'
           expose:
-            items_per_page_label: 'Antal elementer'
-            items_per_page_options_all_label: '- Alle -'
-            offset_label: Forskydning
-      fields:
-        created:
-          label: Oprettet
-        remote_addr:
-          label: IP-adresse
-        view_webform_submission:
-          label: Handlinger
-          text: vis
-      header:
-        result:
-          content: 'Viser @start - @end af @total'
+            items_per_page_label: 'Items per page'
+            items_per_page_options_all_label: '- All -'
+            offset_label: Offset
+      exposed_form:
+        options:
+          submit_button: Anvend
+          reset_button_label: Nulstil
+          exposed_sorts_label: 'Sort by'
+          sort_asc_label: Asc
+          sort_desc_label: Desc
+      empty:
+        area_text_custom:
+          content: 'No submissions available.'
       arguments:
         in_draft:
           exception:
-            title: Alle
+            title: All
+      header:
+        result:
+          content: 'Displaying @start - @end of @total'
   embed_administer:
+    display_title: 'Embed: Administer'
     display_options:
       fields:
         webform_submission_bulk_form:
-          action_title: Handling
+          label: 'Webform submission operations bulk form'
+          action_title: Action
+        sid:
+          label: '#'
+          separator: ', '
+        in_draft:
+          label: Draft
+          separator: ', '
+        sticky:
+          label: Sticky
+          separator: ', '
+        locked:
+          label: Locked
+          separator: ', '
         created:
-          label: Oprettet
+          label: Created
+          separator: ', '
         completed:
           label: Afsluttet
+          separator: ', '
         remote_addr:
-          label: IP-adresse
+          label: 'IP address'
+          separator: ', '
         operations:
-          label: Handlinger
+          label: Operations
+      filters:
+        in_draft:
+          expose:
+            label: 'Is draft'
+        sticky:
+          expose:
+            label: Sticky
+        locked:
+          expose:
+            label: Locked
+      display_description: 'Administer submissions.'
+  embed_default:
+    display_title: 'Embed: Default'
+    display_options:
+      display_description: 'Display submissions.'
   embed_manage:
+    display_title: 'Embed: Manage'
     display_options:
       fields:
         webform_submission_bulk_form:
-          action_title: Handling
+          label: 'Webform submission operations bulk form'
+          action_title: Action
+        sid:
+          label: '#'
+          separator: ', '
+        in_draft:
+          label: Draft
+          separator: ', '
+        sticky:
+          label: Sticky
+          separator: ', '
+        locked:
+          label: Locked
+          separator: ', '
         created:
-          label: Oprettet
+          label: Created
+          separator: ', '
         completed:
           label: Afsluttet
+          separator: ', '
         remote_addr:
-          label: IP-adresse
+          label: 'IP address'
+          separator: ', '
         view_webform_submission:
-          label: Handlinger
-          text: vis
+          label: Operations
+          text: view
         edit_webform_submission:
-          label: Handlinger
-          text: redigér
+          label: Operations
+          text: edit
+      filters:
+        in_draft:
+          expose:
+            label: 'Is draft'
+        sticky:
+          expose:
+            label: Sticky
+        locked:
+          expose:
+            label: Locked
+      display_description: 'Manage submissions.'
   embed_review:
+    display_title: 'Embed: Review'
     display_options:
       fields:
+        sid:
+          label: '#'
+          separator: ', '
+        in_draft:
+          label: Draft
+          separator: ', '
+        sticky:
+          label: Sticky
+          separator: ', '
+        locked:
+          label: Locked
+          separator: ', '
         created:
-          label: Oprettet
+          label: Created
+          separator: ', '
         completed:
           label: Afsluttet
+          separator: ', '
         remote_addr:
-          label: IP-adresse
+          label: 'IP address'
+          separator: ', '
         view_webform_submission:
-          label: Handlinger
-          text: vis
+          label: Operations
+          text: view
+      filters:
+        in_draft:
+          expose:
+            label: 'Is draft'
+        sticky:
+          expose:
+            label: Sticky
+        locked:
+          expose:
+            label: Locked
+      display_description: 'Review submissions.'
